# telegram-bot-framework

./: .gitignore  Dockerfile  README.rst  config_example.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-quality.yml  dependabot.yml  typing.yml
requirements/: dev.txt  requirements.txt
src/: main.py
src/botframework/commands/: __init__.py
src/botframework/commands/ping/: config.py  handler.py
src/botframework/config/: __init__.py
src/botframework/handlers/: __init__.py
src/botframework/handlers/ping/: config.py
src/botframework/manager/: __init__.py  application_manager.py  decorators.py
src/botframework/utils/: constants.py  module_loading.py  typing.py
